--- a/ekart/contact_style.css
+++ b/ekart/contact_style.css
@@ -1,8 +1,10 @@
+  @import url('https://fonts.googleapis.com/css2?family=Faster+One&display=swap');
 *{
     margin: 0px;
+    font-family: 'Faster One', cursive;
 }
 body{
-    background-color: blue;
+    background-color: rgba(27, 27, 59, 0.596);
 }
 .text{
     width: 1000px;
@@ -16,6 +18,8 @@ body{
     height: 50px;
     margin-top: 40px;
     font-size: 25px;
+    margin-bottom: 30px;
+    color: crimson;
 }
 #contact{
     font-size: 100px;
@@ -25,7 +29,7 @@ body{
 }
 .label{
     font-size: 30px;
-    color: rgb(56, 22, 30);
+    color: rgb(255, 156, 179);
 }
 .thing{
     display: block;
@@ -33,6 +37,9 @@ body{
 .all{
     text-align: center;
 }
-#cat{
+#link{
     
+}
+#eg{
+    color: blue;
 }
