--- a/ekart/contact_style.css
+++ b/ekart/contact_style.css
@@ -1,7 +1,7 @@
-  @import url('https://fonts.googleapis.com/css2?family=Faster+One&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Flow+Rounded&display=swap');
 *{
     margin: 0px;
-    font-family: 'Faster One', cursive;
+    font-family: 'Flow Rounded', cursive;
 }
 body{
     background-color: rgba(27, 27, 59, 0.596);
@@ -41,5 +41,5 @@ body{
     
 }
 #eg{
-    color: blue;
+    color: ;
 }
