--- a/ekart/Javascript/not_fanta.css
+++ b/ekart/Javascript/not_fanta.css
@@ -1,4 +1,13 @@
 
+  @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+
+body{
+    /* background-image: url("../../images/fanta_background.png");
+    background-repeat: no-repeat;
+    display: block; */
+    background-color: orange;
+}
+
 .fantaimg{
     width: 150px;
     height: 75px;
@@ -12,8 +21,12 @@
 }
 .product{
     margin-left: 200px;
+    text-decoration: none;
+    color: rgb(25,71,186);
+    font-size: 25px;
     /* margin-right: 200px; */
 }
 .navbar{
-    background-color: orange;
+    background-color: #FF9700;
+    font-family: 'Anton', sans-serif;
 }
