--- a/not_fanta/not_fanta.css
+++ b/not_fanta/not_fanta.css
@@ -1,5 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-  @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 
 body{
     /* background-image: url("../../images/fanta_background.png");
@@ -23,10 +28,15 @@ body{
     margin-left: 200px;
     text-decoration: none;
     color: rgb(25,71,186);
-    font-size: 25px;
-    /* margin-right: 200px; */
+    font-size: 20px;
+    /* margin-bottom: 20px; */
 }
 .navbar{
-    background-color: #FF9700;
     font-family: 'Anton', sans-serif;
+    background-color: #FF9700;
+}
+a:hover{
+    color: rgb(25,71,186);
+    cursor: pointer;
+    text-decoration: underline;
 }
